--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,13 +4,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          java-version: '11'
-      - name: Run tests
-        run: mvn test
-      - name: Package
-        run: mvn -Dmaven.test.skip=true package
-      - name: Run
-        run: java -cp target/com.microservice.movie-0.0.1-SNAPSHOT-jar-with-dependencies.jar com.microservice.movie.MovieApplication
+          java-version: 1.8
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots verify
