added implementation for pushing Movie messages to RabbitMq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.data.mongodb.host=${com_microservice_movie_kt_mongodb_host}
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=movies
+spring.data.mongodb.username=mongosuperuser
+spring.data.mongodb.password=mongoPassword
+spring.data.mongodb.authentication-database=admin
 
